--- a/doc/mockgals.texinfo
+++ b/doc/mockgals.texinfo
@@ -4,31 +4,51 @@
 @settitle mockgals 0.1
 @c %**end of header
 
+
+
+
+
 @copying
 This manual is for @code{mockgals}, a program to make mock
 astronomical objects in a FITS image and add the appropriate noise.
 
-Copyright @copyright{} 2014 Mohammad Akhlaghi.
+@comment Work on the software began on this from October 2013, but the
+@comment manual was written in 2014.
+Copyright @copyright{} 2013, 2014 Mohammad Akhlaghi.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3 or
 any later version published by the Free Software Foundation; with no
 Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
-Texts.  A copy of the license is included in the section entitled
-``GNU Free Documentation License''.
+Texts.  A copy of the license is available online at
+@uref{http://www.gnu.org/copyleft/fdl.html, GNU FDL webpage}.
 @end quotation
 @end copying
+
+
+
+
 
 @titlepage
 @title mockgals
 
 @page 
+
 @vskip 0pt plus 1filll
 @insertcopying
 @end titlepage
 
+
+
+
+
 @contents
+
+
+
+
+
 
 @ifnottex
 @node Top, Introduction., (dir), (dir)
@@ -38,12 +58,36 @@ This manual is for @code{mockgals}, which is a tool to create mock
 galaxies and stars in an image and save the result in a FITS file.
 @end ifnottex
 
+
+
+
+
 @menu
 * Introduction.::
 * temp::
 * Installing::
 * Index::
 @end menu
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @node Introduction., temp, Top, Top
 @chapter An introduction.
@@ -71,22 +115,72 @@ and modify or contribute to by any interested user.
 [To be added] Can make profiles in any dimentions. 
 @end enumerate
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @node temp, Installing, Introduction., Top
 @chapter tmp
 This is a temporary chapter.
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @node Installing, Index, temp, Top
 @chapter Installation
-@code{mockgals} relys on only 3 packages: GSL and FFTW.
+@code{mockgals} relys on only 3 packages: @code{GSL} (for mathematical
+functions), @code{FFTW} (for convolution) and @code{cfitsio} (for reading to and from FITS files).
 
 
-@node GNU Free Documentation License
-@appendix GNU Free Documentation License
 
-@include fdl.texi
 
-@node Index,  , Installing, Top
-@unnumbered Index
 
-@printindex cp
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @bye
