--- a/doc/mockgals.texinfo
+++ b/doc/mockgals.texinfo
@@ -6,9 +6,11 @@
 
 @dircategory Astronomy
 @direntry
-* mockgals: (mockgals).         Make mock galaxies and stars.
+* mockgals: (MockGals).         Make mock galaxies and stars.
 @end direntry
 
+@c Use section titles in cross references, not node titles.
+@xrefautomaticsectiontitle on
 @c %**end of header
 
 
@@ -16,10 +18,11 @@
 
 
 @copying
-This manual is for @code{mockgals}, a program to make mock
-astronomical objects in a FITS image and add the appropriate noise.
+This manual is for MockGals, a program to make mock astronomical
+objects in a FITS image and add the appropriate noise.
 
-Copyright @copyright{} 2014 Mohammad Akhlaghi.
+Copyright @copyright{} 2014 Mohammad Akhlaghi:
+@email{akhlaghi@@astr.tohoku.ac.jp}
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -38,7 +41,7 @@ Texts.  A copy of the license is available online at
 @titlepage
 @title MockGals
 @subtitle Make mock stars and galaxies in a FITS image with noise.
-@subtitle Manual for mockgals version 0.1
+@subtitle Manual for MockGals version 0.1
 @author Mohammad Akhlaghi
 
 @page
@@ -47,27 +50,36 @@ Texts.  A copy of the license is available online at
 
 @end titlepage
 
-@contents
-
 @ifnottex
-@node Top
-@top Info top title
-This manual is for @code{mockgals}, which is a tool to create mock
-galaxies and stars in an image and save the result in a FITS file.
+@node Top, About, (dir), (dir)
+@top MockGals
+MockGals is a tool to produce mock galaxies and stars based on an
+input catalog or randomly into a FITS image of any given size. It can
+be used to test various detection criteria. 
 @end ifnottex
 
 @menu
-* About::               About this manual and how to use it.
-* QuickStart::          A quick start guide to MockGals.
-* Introduction::        An introduction to how MockGals works.
-* Installation::        How to install MockGals
-* Configuring::         Customizing MockGals.
-* Mock Parameters::     The parameters table for the mock profiles.
-* How it works::        A detailed description of all major functions.
-* Index::               An index to all the terms used.
+* About::                       About this manual.
+* Quick start::                 Get started.
+* Introduction::                An introduction to MockGals.
+* Installation::                How to install MockGals.
+* Configuring::                 Customizing MockGals.
+* Mock Parameters::             Mock profile parameter table.
+* How it works::                Mock gals coding guide.
+* Manual index::                Intex to terminology used.
 @end menu
 
 
+@contents
+
+@ifplaintext
+@noindent
+---------------------------
+
+@noindent
+Copyright notice:
+@insertcopying
+@end ifplaintext
 
 
 
@@ -83,18 +95,16 @@ galaxies and stars in an image and save the result in a FITS file.
 
 
 
+@node About, Quick start, Top, Top
+@chapter About
 
+To get started with MockGals please please see @ref{Quick start}.  The
+following sections in this chapter are more general discussions.
 
-@node About
-@chapter About this manual
-
-To get started with MockGals please go to the next chapter.
-
-The following sections are more general discussions. In the first
-section we will give a short review of the way modern science has
-become intertwined with software and how important it is for
-scientists to have very good understanding of the software they use.
-After that you rights as the reader of this document and user of
+In the first section we will give a short review of the way modern
+science has become intertwined with software and how important it is
+for scientists to have very good understanding of the software they
+use.  After that your rights as the reader of this document and user of
 MockGals are explained and in the end of this chapter we give a short
 review of how this manual is available for your use and a short
 summary of the manual.
@@ -106,140 +116,199 @@ summary of the manual.
 
 
 @menu
-* Good Science::        How good science depends on good software.
-* Your rights::         Your rights as a user of MockGals.
-* How to read::         How to read this manual.
+* Good Science::                Science and its software.
+* Your rights::                 Your rights as a user of MockGals.
+* Manual formats::              Formats this manual is available in.
+* Conventions and summary::     Summary of this manual.
 @end menu
 
-@node Good Science
-@section Good science
+@node Good Science, Your rights, About, About
+@section Objective/critical science and its software
 We believe that if a software (a technique) is to be used in
-scientific research, it has to be open source and open to scrutiny. So
-any critical/interested user can easily follow all the steps and
-understand all their details and assumptions. No software is perfect
-and there are ultimately some flaws in any software that allow future
-generations to find them and advance our experimental and theoretical
-knowledge of the universe we live in. With the progress of technology,
-scietific results are increasing becoming more and more dependent on
-hard/software techniques. Therefore obscure software is arguably the
-biggest roadblock in our aim to acheive this goal and a modern
-scientists cannot claim to be interested in understanding the universe
-and our relation to it, what ever their specific field, without
-accurately understanding the software techniques used.
+scientific research, it has to be open source and transparent (with a
+good manual) to be open to scrutiny. Any critical/interested user
+should easily be able to follow all the steps and understand all the
+fine details and assumptions. History of science shows us that no
+interpretation, model or technique (software) is perfect.  There are
+always inevitabley unseen faults, hidden assumptions, simplifications
+and approximations in any of our constructs. It is precisely these
+that will ultimately allow future generations to find/correct them and
+advance our experimental and theoretical knowledge of the universe we
+live in. By keeping software free and transparent for all scientists,
+we can most accurately convey our experiences to users who can build
+on those or find their shortcomings. Viewed more generally, this will
+help critical and objective science thrive.
+
+With the progress of technology, scientific results are increasingly
+becoming more and more dependent on hardware and software
+techniques. Therefore obscure software is arguably the biggest
+roadblock in our aim to acheive this goal and a modern scientist
+cannot claim to be curious in understanding the universe and our
+relation to it, what ever their specific field, without accurately
+understanding the software techniques they use to quench that
+curiosity.  We thus believe that the wide use of free and transparent
+software is one step in a larger scheme to save the sciences...
+
+@quotation
+...from narrow specialization and from an obscurantist faith in the
+expert's special skill and in his personal knowledge and authority; a
+faith that so well fits our post-rationalistic and post critical age,
+proudly dedicated to the destruction of the tradition of rational
+philosophy and of rational thought its self.
+
+@author Karl Popper. The logic of scientific discovery. 1959.
+@end quotation
 
 To reach this goal, namely to let the users of a software be able to
 understand its intricate details at their will, a software has to be
 accompanied by a good and up to date manual. The user of a software
 cannot claim to understand how it works only based on the experience
-they have gained in using it a lot or on mock simulations, that kind
-of subjective experience is prone to very serious mis-understandings
-that only help in producing dogmas.  Unfortunately in the commonly
-used astronomical software, most are either closed source or don't
-have a good manual. The scientific results that are deduced from such
+they have gained by frequently using it. This kind of subjective
+experience is prone to very serious mis-understandings that only help
+in producing dogmas and the above mentioned ``obscurationist faith in
+the expert's special skill''.  Unfortunately in the commonly used
+astronomical softwares, most are either closed source or don't have a
+good manual. The scientific results that are deduced from such
 software are thus not objective, because in the former case scientists
 have to look at it as a black box and trust its results on faith. In
 the latter, it is very hard to find enough time to understand the
-programming of an open source project with out a clearly written
-manual explaining all the ideas behind the major functions, data
-structures or objects. It is certainly time consuming for the
-programmer to make such a manual, but if the greater common experience
-is considered, that time put is very nicely invested. Because through
-sharing of these fundamental ideas that shape all our scientific
-results and keeping them open to criticism, we can make them more
-robust and thus take better steps in our endeavor to quench our
-curiosity in nature.
+programming of an open source project without a clearly written and up
+to date manual explaining all the ideas behind the major functions,
+data structures or objects. 
+
+It is certainly time consuming for the author of a software to make
+such a manual. If personal greed is put aside and our greater common
+experience is considered, that time is a time well invested. Because
+through sharing of these fundamental ideas, that shape all our
+scientific results, and keeping them open to criticism, we can make
+them more robust and thus take better steps in our common goal to
+tackle the riddles of nature.
 
 Bjarne Stroustrup (creator of the @code{C++} language) says: ``Without
 understanding software, you are reduced to believing in magic''.  Ken
 Thomson (the designer or the Unix operating system) has said very
 nicely that ``I abhor a system designed for the ``user'' if that word
 is a coded pejorative meaning ``stupid and unsophisticated''.'' Both
-these cases naturally apply more seriously to systems written for
+these cases naturally apply even more seriously to systems written for
 scientific applications and as scientists we should be loyal to such
 principles if we want to remain critical and be objective. After all,
 all our data and models are produced, archived and processed using
-hard/software. We cannot and should not accept any result through
-faith in the programmer who wrote that particular program we are using
-to publish our papers.
+hardware and software. We cannot and should not accept any result
+through faith in the programmer who wrote that particular program we
+are using to publish our papers.
 
 
 
 
 
-@node Your rights
-@section Your rights
+@node Your rights, Manual formats, Good Science, About
+@section Your rights as a user of MockGals
 
-mockgals is ``free software''; this means that everyone is free to use
-it and free to redistribute it on certain conditions.  mockgals is not
+MockGals is ``free software''; this means that everyone is free to use
+it and free to redistribute it on certain conditions. MockGals is not
 in the public domain; it is copyrighted and there are restrictions on
 its distribution, but these restrictions are designed to permit
 everything that a good cooperating citizen would want to do.  What is
 not allowed is to try to prevent others from further sharing any
-version of Texinfo that they might get from you.
+version of MockGals that they might get from you.
 
 Specifically, we want to make sure that you have the right to give
-away copies of the programs that relate to mockgals, that you receive
+away copies of the programs that relate to MockGals, that you receive
 source code or else can get it if you want it, that you can change these
 programs or use pieces of them in new free programs, and that you know
 you can do these things.
 
 To make sure that everyone has such rights, we have to forbid you to
 deprive anyone else of these rights.  For example, if you distribute
-copies of the mockgals related programs, you must give the recipients
+copies of the MockGals related programs, you must give the recipients
 all the rights that you have.  You must make sure that they, too,
 receive or can get the source code.  And you must tell them their
 rights.
 
 Also, for our own protection, we must make certain that everyone finds
-out that there is no warranty for the programs that relate to mockgals.
+out that there is no warranty for the programs that relate to MockGals.
 If these programs are modified by someone else and passed on, we want
 their recipients to know that what they have is not what we distributed,
 so that any problems introduced by others will not reflect on our
 reputation.
 
 The precise conditions of the licenses for the programs currently
-being distributed that relate to mockgals are found in the General Public
-Licenses that accompany them.  This manual is covered by the GNU Free
-Documentation License (*note GNU Free Documentation License::).
+being distributed that relate to MockGals are found in the General
+Public license@footnote{ @url{https://www.gnu.org/copyleft/gpl.html}}
+that accompany them.  This manual is covered by the GNU Free
+Documentation License@footnote{
+@url{https://www.gnu.org/copyleft/fdl.html}}.
 
 The paragraphs above, in this section, belong to the GNU Texinfo manual
 and are not written by us! We have just changed the name ``Texinfo''
-to ``mockgals'' because it and this manual are released under the same
+to ``MockGals'' because it and this manual are released under the same
 licenses and it is beautifully written to inform you of your rights.
 
 
 
 
 
-
-@node How to read
-@section How to read this manual
-This manual is available in plain text, HTML, info, Docbook, PDF and
-finally the Texinfo format. The last one is the basis for creating all
-the other formats. As an initial introduction the PDF and HTML formats
-might be easier to begin using mockgals, but if you would like to
-understand the code, it is much easier to do it in the info format,
-where for example in emacs, you can have one window on the code and
-another on the info file explaining each function, the idea behind its
-usage and how it is used in the Emacs @code{*info*} window.
-
-@code{info} is a very easy to use and particularly useful format for
-software documentation. We strongly recommend becoming familiar with
-it if you are not because it can significantly enhance your experience
-in programming and in GNU based operating systems (like GNU/Linux). It
-is very trivial made for reading manuals and getting facilitates
-navigating in long manuals. To learn more about it in any GNU/linux
-terminal you can run: @code{info info}. It does a fantastic job in
-explaining its self in practice interactively.
+@node Conventions and summary,  , Manual formats, About
+@section Manual conventions and summary
+In this manual commands to be input into the command line as normal
+user begin with @command{$}, and for those that to be input as root
+(or super-user), the command begins with @command{#}. Note that you
+need the root password in order to execute the latter commands. The
+commands finish where the special type face used to show them
+finishes. Be careful not to include text puctuation marks that might
+follow the inline commands, they have a different font. After typing
+the commands on the command-line you have to press the @key{Enter} or
+@key{Return} key on your keyboard for the command to start executing.
 
 The first chapter is a quick start, explaining the generalities of
-Mockgals so the user can begin using it very fast. The following
+MockGals so the user can begin using it very fast. The following
 chapters give a much more detailed review of each step. 
 
 
 
 
 
+@node Manual formats, Conventions and summary, Your rights, About
+@section Manual Formats and reading recommendations
+This manual is available in plain text, HTML, Info, Docbook, PDF and
+finally the Texinfo format. The last one is the basis for creating all
+the other formats. As an initial introduction the PDF and HTML formats
+might be easier to begin using MockGals, but if you would like to
+understand the code while reading @ref{How it works}, it is much
+easier to do it in the info format, where for example in Emacs, you
+can have one window on the code and another on the info file.
+
+Info is a very convenient format particularly useful for software
+documentation. We strongly recommend becoming familiar with it if you
+are not already because it can significantly enhance your experience
+in programming and in your GNU based operating systems user
+experience.  Operating systems like Ubuntu, Fedora, Linux Mint,
+Debian, OpenSUSE, Red Hat, CentOS or Scientific linux among many
+others. Info is very trivial and made for reading manuals. It provides
+facilitates to navigate easily in long manuals. To learn more about it
+in any GNU/linux terminal you can run: @command{$ info info}. It does
+a fantastic job in explaining its self in practice interactively.
+
+By default, the PDF version of this manual is prepared in the A4 paper
+size (210cm by 297cm). In case you prefer a letter size (8.5in by
+11in), you can simply change it by following the steps below. You must
+have Texinfo and @TeX{} installed on your system, for an explanation
+on how to install them see @ref{Installation}.
+
+@enumerate
+@item
+In the downloaded source directory (lets call it @file{SRC/}), open
+the @file{SRC/doc/mockgals.texinfo} Texinfo source file of this
+manual.
+
+@item
+Delete the line that says @code{@@afourpaper}. It is in the first few
+lines of the file.
+
+@item
+run @code{$ ./run.sh} in that same directory, this will re-make all
+the documenation formats.
+@end enumerate
 
 
 
@@ -255,19 +324,17 @@ chapters give a much more detailed review of each step.
 
 
 
-@node QuickStart
-@chapter Quick start
-
-Once @code{mockgals} is installed, if you simply run @code{./mockgals}
-in the installed directory, 45 mock galaxies and 5 stars will be
-randomly positioned in a @code{FITS} image of size @math{200*200}.
 
 
 
 
 
+@node Quick start, Introduction, About, Top
+@chapter A Quick start
 
-
+Once MockGals is installed, if you simply run @code{./mockgals} in the
+installed directory, 45 mock galaxies and 5 stars will be randomly
+positioned in a @code{FITS} image of size @math{200*200}.
 
 
 
@@ -281,28 +348,38 @@ randomly positioned in a @code{FITS} image of size @math{200*200}.
 
 
 
-@node Introduction
+
+
+
+
+
+
+
+@node Introduction, Installation, Quick start, Top
 @chapter Introduction
 
 Making mock galaxies is very important in the process of understanding
-our data. @code{mockgals} was initially made with this exact
+our data. MockGals was initially made with this exact
 intent. Certain astronomical targets, for example elliptical
 galaxies, are very sharp in their central regions, this makes a simple
 calculation of the profile in the center of each pixel unrealistic for
-such cases. The main advantage of @code{mockgals} is that it
+such cases. The main advantage of MockGals is that it
 integrates the central parts of profiles until a given accuracy. It
 does this without any sorting or ordering and in a very fast manner.
 
 @noindent
-A summary of the advantages of @code{mockgals} includes:
+A summary of the advantages of MockGals includes:
 @enumerate
 @item
 Integration of the center of the profile.
+
 @item 
 Very efficient in CPU usage, resuling in a very fast processing.
+
 @item
 Written in the C programming language, which is easy to understand
 and modify or contribute to by any interested user.
+
 @item
 [To be added] Can make profiles in any dimentions. 
 @end enumerate
@@ -326,10 +403,11 @@ and modify or contribute to by any interested user.
 
 
 
-@node Installation
+@node Installation, Configuring, Introduction, Top
 @chapter Installation
-@code{mockgals} relys on only 3 packages: @code{GSL} (for mathematical
-functions), @code{FFTW} (for convolution) and @code{cfitsio} (for reading to and from FITS files).
+MockGals relys on only 3 packages: GSL (GNU scientific library, for
+mathematical functions), FFTW (for convolution) and cfitsio (for
+reading to and from FITS files).
 
 
 
@@ -350,9 +428,9 @@ functions), @code{FFTW} (for convolution) and @code{cfitsio} (for reading to and
 
 
 
-@node Configuring
-@chapter Configuring mockgals.
-Currently configuration paramters into @code{mockgals} can only be
+@node Configuring, Mock Parameters, Installation, Top
+@chapter Configuring MockGals
+Currently configuration paramters into MockGals can only be
 given through single letter commandline options. The options are
 explained below.
 
@@ -375,11 +453,11 @@ explained below.
 
 
 
-@node Mock Parameters
+@node Mock Parameters, How it works, Configuring, Top
 @chapter Mock parameters
 The parameters of the profiles you want to build into a FITS image are
 fed to it though a table. In this section we will review how
-@code{mockgals} reads that table and how best to prepare it.
+MockGals reads that table and how best to prepare it.
 
 
 
@@ -400,11 +478,11 @@ fed to it though a table. In this section we will review how
 
 
 
-@node How it works
+@node How it works, Manual index, Mock Parameters, Top
 @chapter How mockgals works
-In this section we will give a complete review on how @code{mockgals}
-works and how this is implemented in its coding in order to facilitate
-your reading of the code and possibly modifying it and making it better.
+In this section we will give a complete review on how MockGals works
+and how this is implemented in its coding in order to facilitate your
+reading of the code and possibly modifying it and making it better.
 
 
 
@@ -425,7 +503,7 @@ your reading of the code and possibly modifying it and making it better.
 
 
 
-@node Index
+@node Manual index,  , How it works, Top
 @unnumbered Index
 
 @printindex cp
